@@ -16,5 +16,5 @@
 
 # Info. for development builds
 
-#tag_build        = .dev
-#tag_svn_revision = 1
+tag_build        = .dev
+tag_svn_revision = 1
