@@ -1,5 +1,6 @@
 2.0.1
-  * Fixed a few problems with the scripts that ship with LSL 
+  * Fixed a few problems with the scripts that ship with LSL
+  * Added support for time zone-aware datetime instances in lsl.common.datetime_to_mjdmpm() and mjdmpm_to_datetime()
 
 2.0.0
   * Major API changes to put LSL under a uniform coding style
